--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -71,8 +71,59 @@
     background-color: lightcoral;
 }
 
-.video-content {
+.close {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    cursor: pointer;
+    filter: invert(1);
+    max-width: 25px;
+}
+
+.video-img {
     width: 100%;
-    max-width: 1000px;
+    background-color: violet;
+    height: 750px;
+    // text-align: center;
+    background:url(../images/port-demo-bg.jpg) no-repeat center;
     position: relative;
+
+    .thumb {
+        // max-width: 800px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        @include boxShadow(1px 1px 4px rgba(56, 55, 55, 0.1));
+    }
+}
+
+.video-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10000;
+    background-color: white;
+    // width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+
+    .demo-reel {
+        position: relative;
+        // max-width:900px;
+        outline: none;
+        cursor: pointer;
+    }
+}
+
+.active {
+    visibility: visible;
+    opacity: 1;
 }
