--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -71,6 +71,10 @@
     background-color: lightcoral;
 }
 
+#demo-content {
+    position: relative;
+}
+
 .close {
     position: absolute;
     top: 30px;
@@ -113,36 +117,40 @@
 }
 
 
-.video-lightbox {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 10000;
-    background-color: white;
-    // width: 100%;
-    height: 100%;
+.lightbox {
+    top: 0;
+    /* top: 150px; */
+    position: absolute;
+    /* left: 80px; */
+    width: 100%;
+    height: 750px;
+    /* max-width: 800px; */
+    /* background-color: green; */
     display: flex;
     justify-content: center;
     align-items: center;
-    visibility: hidden;
-    opacity: 0;
-
-    .demo-reel {
-        position: relative;
-        // max-width:900px;
-        outline: none;
-        cursor: pointer;
+    // visibility: hidden;
+    // opacity: 0;
+    // display:none;
+    .video-lb {
+        max-width: 800px;
     }
 }
 
-.active {
-    visibility: visible;
-    opacity: 1;
+.show-lightbox {
+    // visibility: visible;
+    // opacity: 1;
+    display: block;
+}
+
+.video-btns-container {
+    text-align: center;
 }
 
 .video-btns {
     text-align: center;
+    display: inline-block;
+    
     img {
         cursor: pointer;
         margin: 15px;
@@ -160,7 +168,7 @@
     align-items: center;
     // background-color: antiquewhite;
     width: 85%;
-    margin: auto;
+    margin: 50px auto;
 }
 
 .proj-item {
@@ -209,3 +217,8 @@
     }
 }
 
+.graphic-pop {
+    width: 100%;
+    height: 200px;
+    background-color: red;
+}
