--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -75,15 +75,6 @@
     position: relative;
 }
 
-.close {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    cursor: pointer;
-    filter: invert(1);
-    max-width: 25px;
-}
-
 .video-img {
     width: 100%;
     background-color: violet;
@@ -119,33 +110,45 @@
 
 
 .lightbox {
-    top: 0;
-    /* top: 150px; */
-    position: absolute;
-    /* left: 80px; */
-    width: 100%;
-    height: 750px;
-    /* max-width: 800px; */
-    /* background-color: green; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // visibility: hidden;
-    // opacity: 0;
-    // display:none;
-    .video-lb {
-        max-width: 800px;
+    display: none;
+    position: fixed;
+    top:0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color:rgba(255, 255, 255, 0.9);
+    color: $main-font;
+    padding: 40px;
+    z-index: 3;
+    overflow: scroll;
+
+    span {
+        color: $main-font;
+        font-size: 2em;
+        cursor: pointer;
     }
 }
 
+.close {
+    position: fixed;
+    top: 60px;
+    right: 60px;
+    cursor: pointer;
+    max-width: 25px;
+}
+
 .show-lightbox {
-    // visibility: visible;
-    // opacity: 1;
     display: block;
 }
 
 .video-btns-container {
     text-align: center;
+
+    h3 {
+        margin: 20px;
+        font-style: italic;
+        color: $sub-text-color;
+    }
 }
 
 .video-btns {
@@ -222,4 +225,8 @@
     width: 100%;
     height: 200px;
     background-color: red;
+}
+
+.graphic-template {
+    text-align: center;
 }
